--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.6.0
+confusable-homoglyphs==3.2.0
 Django==4.1.5
+django-registration==3.3
 flake8==6.0.0
 MarkupSafe==2.1.2
 mccabe==0.7.0
