--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 asgiref==3.6.0
 confusable-homoglyphs==3.2.0
 Django==4.1.5
+django-contrib-comments==2.2.0
 django-registration==3.3
+django-taggit==3.1.0
+django-tinymce==3.5.0
 flake8==6.0.0
 MarkupSafe==2.1.2
 mccabe==0.7.0
+Pillow==9.4.0
 psycopg2-binary==2.9.5
 pycodestyle==2.10.0
 pyflakes==3.0.1
