Update way to start containers

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,6 +4,11 @@ services:
  web:
   build:
    context: .
+  depends_on:
+    - postgresdb
+  entrypoint: ./start.sh
+  environment:
+    - initial=${initial}
   ports:
   - 8000:8000
   volumes:
@@ -13,5 +18,12 @@ services:
   image: postgres
   ports:
   - 5432:5432
+  healthcheck:
+    test: ["CMD", "psql", "-U", "postgres"]
+    interval: 1m30s
+    timeout: 10s
+    retries: 3
+    start_period: 40s
+
   environment:
   - POSTGRES_PASSWORD=peri54ri7end
