--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-registration==3.3
 django-taggit==3.1.0
 django-tinymce==3.5.0
 flake8==6.0.0
+gunicorn==20.1.0
 MarkupSafe==2.1.2
 mccabe==0.7.0
 Pillow==9.4.0
